# hermes

./: .gitignore  .readthedocs.yaml  README.md  manual-install.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
doc/: USAGE.md
docs/: advanced.rst  bot.rst  cli.rst  conf.py  hermes.bot.rst  hermes.rst  hermes.task.rst  index.rst  setup.rst  tasks.rst
examples/: cli_demo.sh  hook.sh  task_demo.ipynb  task_demo_advanced.ipynb
hermes/: __init__.py  cli.py  common.py  setup.py  templates.py  version.py
hermes/bot/: __init__.py  fpower.py  functions.py  handlers.py  linguist.py  logger.py  main.py
hermes/task/: __init__.py  linguist.py  logger.py  main.py
lib/: external.py  hermes.service  settings.ini  users.key
src/: setup.py
src/hermes/: __init__.py  __main__.py  cli.py  common.py  install.py  installer.py  setup.py  templates.py  version.py
src/hermes/bot/: __init__.py  fpower.py  handlers.py  linguist.py  logger.py  main.py
src/hermes/task/: __init__.py  linguist.py  logger.py  main.py
templates/: hermes.service  settings.ini
