#########################################################
#   HERMES - github.com/baronefr/hermes
# - - - - - - - - - - - - - - - - - - - - - - - - - - - -
#  coder: Barone Francesco, last edit: 10 Oct 2024
#--------------------------------------------------------

[project]
name = "hermes"
version = "2.2.0"
description = "Telegram bot for messages, task notifications & system management"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Francesco Barone", }
]

requires-python = ">=3.8"


[project.scripts]
hermes = "hermes:__main__"
hermes-setup = "hermes.setup:main"


[options.packages.find]
where = "src"


[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"